Miscellaneous code cleanup (#686)