@@ -2,7 +2,6 @@ package com.smartcodeltd.jenkinsci.plugins.buildmonitor.culprits;
 
 import hudson.model.Run;
 
-import java.util.Collections;
 import java.util.Set;
 
 public class BuildCulpritsNotImplemented extends BuildCulpritsRetriever {
@@ -11,11 +10,11 @@ public class BuildCulpritsNotImplemented extends BuildCulpritsRetriever {
 
     @Override
     public Set<String> getCulprits(Run<?, ?> run) {
-        return Collections.emptySet();
+        return Set.of();
     }
 
     @Override
     protected Set<String> getCommittersForRun(Run<?, ?> run) {
-        return Collections.emptySet();
+        return Set.of();
     }
 }
